# mnist

./: .gitignore  CMakeLists.txt  config.h.template  cpu_matmul_history.md  mnist  mnist.c  mnist.cu  mybmp.c  mybmp.h  readme.md
